--- a/index.html
+++ b/index.html
@@ -17,189 +17,215 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          >Web<span class="studio">Studio</span></a
-        >
-        <ul>
-          <li><a href="./index.html" class="nav-item">Studio</a></li>
-          <li><a href="" class="nav-item">Portfolio</a></li>
-          <li><a href="" class="nav-item">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-item"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-item"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo"
+            >Web<span class="studio">Studio</span></a
+          >
+          <ul class="header-list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Studio</a>
+            </li>
+            <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a href="mailto:info@devstudio.com" class="address-item"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a href="tel:+110001111111" class="address-item"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button-hero">Order Service</button>
+        <div class="container">
+          <div class="container-hero">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="button-hero">Order Service</button>
+          </div>
+        </div>
       </section>
-      <section>
-        <h2>Benefits</h2>
-        <ul>
-          <li>
-            <h3 class="benefits-title">Strategy</h3>
-            <p class="benefits-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Punctuality</h3>
-            <p class="benefits-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Diligence</h3>
-            <p class="benefits-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Technologies</h3>
-            <p class="benefits-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="benesits-section">
+        <div class="container">
+          <h2 hidden class="benefits-title">Benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Strategy</h3>
+              <p class="benefits-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Punctuality</h3>
+              <p class="benefits-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Diligence</h3>
+              <p class="benefits-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Technologies</h3>
+              <p class="benefits-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="our-team">
-        <h2 class="our-team-title">Our Team</h2>
-        <ul>
-          <li class="team-list">
-            <img
-              src="./images/img1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="team-list">
-            <img
-              src="./images/img2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="team-list">
-            <img
-              src="./images/img3.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="team-list">
-            <img
-              src="./images/img4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="our-team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <img
+                class="team-image"
+                src="./images/img1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-image"
+                src="./images/img2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-image"
+                src="./images/img3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-image"
+                src="./images/img4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="title-portfolio">Our Portfolio</h2>
-        <ul>
-          <li class="portfolio-item">
-            <img
-              src="./images/img21.jpg"
-              alt="banking app"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-name">Banking App</h3>
-            <p class="portfolio-item-specification">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img22.jpg"
-              alt="cashless payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-name">Cashless Payment</h3>
-            <p class="portfolio-item-specification">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img23.jpg"
-              alt="meditation app"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-name">Meditation App</h3>
-            <p class="portfolio-item-specification">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img24.jpg"
-              alt="taxi service"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-name">Taxi Service</h3>
-            <p class="portfolio-item-specification">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img25.jpg"
-              alt="screen illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-name">Screen Illustrations</h3>
-            <p class="portfolio-item-specification">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img26.jpg"
-              alt="online courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-name">Online Courses</h3>
-            <p class="portfolio-item-specification">Marketing</p>
-          </li>
-        </ul>
+      <section class="section-portfolio">
+        <div class="container">
+          <h2 class="title-portfolio">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img21.jpg"
+                alt="banking app"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-name">Banking App</h3>
+              <p class="portfolio-item-specification">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img22.jpg"
+                alt="cashless payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-name">Cashless Payment</h3>
+              <p class="portfolio-item-specification">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img23.jpg"
+                alt="meditation app"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-name">Meditation App</h3>
+              <p class="portfolio-item-specification">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img24.jpg"
+                alt="taxi service"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-name">Taxi Service</h3>
+              <p class="portfolio-item-specification">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img25.jpg"
+                alt="screen illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-name">Screen Illustrations</h3>
+              <p class="portfolio-item-specification">Design</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img26.jpg"
+                alt="online courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-name">Online Courses</h3>
+              <p class="portfolio-item-specification">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="studio-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="studio-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
