--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
       </div>
     </header>
     <main>
+      <!-- section Benefits -->
+
       <section class="hero">
         <div class="container">
-          <div class="container-hero">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button type="button" class="button-hero">Order Service</button>
-          </div>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="button-hero">Order Service</button>
         </div>
       </section>
       <section class="benesits-section">
         <div class="container">
-          <h2 hidden class="benefits-title">Benefits</h2>
+          <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <h3 class="benefits-item-title">Strategy</h3>
@@ -91,6 +91,9 @@
           </ul>
         </div>
       </section>
+
+      <!-- section Our Team -->
+
       <section class="our-team">
         <div class="container">
           <h2 class="our-team-title">Our Team</h2>
@@ -103,8 +106,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-position">Product Designer</p>
+              <div class="team-charakters">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -114,8 +119,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-position">Frontend Developer</p>
+              <div class="team-charakters">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -125,8 +132,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-position">Marketing</p>
+              <div class="team-charakters">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -136,12 +145,17 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-position">UI Designer</p>
+              <div class="team-charakters">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
+
+      <!-- section Portfolio -->
+
       <section class="section-portfolio">
         <div class="container">
           <h2 class="title-portfolio">Our Portfolio</h2>
@@ -154,8 +168,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-name">Banking App</h3>
-              <p class="portfolio-item-specification">App</p>
+              <div class="portfolio-charakters">
+                <h3 class="portfolio-item-name">Banking App</h3>
+                <p class="portfolio-item-specification">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -165,8 +181,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-name">Cashless Payment</h3>
-              <p class="portfolio-item-specification">Marketing</p>
+              <div class="portfolio-charakters">
+                <h3 class="portfolio-item-name">Cashless Payment</h3>
+                <p class="portfolio-item-specification">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -176,8 +194,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-name">Meditation App</h3>
-              <p class="portfolio-item-specification">App</p>
+              <div class="portfolio-charakters">
+                <h3 class="portfolio-item-name">Meditation App</h3>
+                <p class="portfolio-item-specification">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -187,8 +207,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-name">Taxi Service</h3>
-              <p class="portfolio-item-specification">Marketing</p>
+              <div class="portfolio-charakters">
+                <h3 class="portfolio-item-name">Taxi Service</h3>
+                <p class="portfolio-item-specification">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -198,8 +220,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-name">Screen Illustrations</h3>
-              <p class="portfolio-item-specification">Design</p>
+              <div class="portfolio-charakters">
+                <h3 class="portfolio-item-name">Screen Illustrations</h3>
+                <p class="portfolio-item-specification">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -209,8 +233,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-name">Online Courses</h3>
-              <p class="portfolio-item-specification">Marketing</p>
+              <div class="portfolio-charakters">
+                <h3 class="portfolio-item-name">Online Courses</h3>
+                <p class="portfolio-item-specification">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -218,7 +244,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo logo-footer"
           >Web<span class="studio-footer">Studio</span></a
         >
         <p class="footer-text">
