--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             >Web<span class="studio">Studio</span></a
           >
           <ul class="header-list">
-            <li class="nav-item">
-              <a href="./index.html" class="nav-link">Studio</a>
-            </li>
+            <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
             <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
             <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
           </ul>
