--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-div">
+      <div class="container header-container">
         <nav class="header-nav">
           <a href="./index.html" class="logo logo-header"
             >Web<span class="studio">Studio</span></a
